sass/video/_player.scss
@charset "utf-8";

@use "../base/mixins" as *;

/** @section Player */

.player {
    video {
        background: var(--primary-colour);
        display: block;
    }
    .controls {
        font-size: 1.4rem;
        color: var(--secondary-colour);
        background: var(--primary-colour);
        display: grid;
        grid-template: repeat(2, 5rem) / repeat(3, auto) 1fr;
        column-gap: 1rem;
        list-style: none;
        padding: 1rem 2rem;
        li {
            &:first-child {
                grid-column: 1 / -1;
                display: inline-flex;
                flex-direction: column;
                justify-content: center;
            }
            &:last-child {
                justify-self: end;
            }
        }
        button {
            line-height: 0;
            border: none;
        }
        progress {
            background: white;
            flex-basis: 50%;
            width: initial; // Safari, Google Chrome
            border: none;
            appearance: none;
            cursor: pointer;
            &::-webkit-progress-bar {
                background: white;
            }
            &::-webkit-progress-value {
                background: var(--secondary-colour);
            }
            &::-moz-progress-bar {
                background: var(--secondary-colour);
            }
        }
        .timer {
            display: inline-grid;
            grid-template-columns: 3ch 1ch 3ch;
            gap: 1ch;
            justify-items: end;
        }
    }
    @include css-media-queries('screen', $other-media-features: '(pointer: fine)') {
        .controls {
            grid-template-rows: 2rem 2rem;
            li:not(:first-child) {
                align-self: center;
            }
            button {
                img {
                    width: 20px;
                    aspect-ratio: 1;
                }
            }
        }
    }
}

